タイムテーブルセクションを追加し、内容を整備

--- a/index.html
+++ b/index.html
@@ -145,6 +145,34 @@
       </div>
     </div>
   </div>
+  <hr>
+  <!-- タイムテーブル セクション -->
+  <section id="timetable" class="timetable-section">
+    <h2 class="timetable-title">LT・実演タイムテーブル</h2>
+    <div class="timetable-wrapper">
+      <div class="timetable-block">
+        <h3 class="timetable-sub">1日目（予定）</h3>
+        <ul class="timetable-list">
+          <li><time>10:50</time> 電電とは？</li>
+          <li><time>11:45</time> セキュリティ・キャンプに参加した話</li>
+          <li><time>13:30</time> 自宅にサーバーを構築した話</li>
+        </ul>
+      </div>
+      <div class="timetable-block">
+        <h3 class="timetable-sub">2日目（予定）</h3>
+        <ul class="timetable-list">
+          <li><time>09:15</time> 競技プログラミングとは？</li>
+          <li><time>11:45</time> セキュリティ・キャンプに参加した話</li>
+          <li><time>13:30</time> 自宅にサーバーを構築した話</li>
+          <li><time>14:30</time> 便利アプリの紹介</li>
+        </ul>
+      </div>
+    </div>
+    <div class="nn-demo-note">
+      <strong>どこかの時間で：</strong> ニューラルネットワーク実演（当日決定 / 調整中）
+    </div>
+    <p class="timetable-notice">※ 上記時刻は前後する場合があります。<br>※ ご要望があれば空き時間にいつでもミニLT / 実演を差し込めます。お気軽に声をかけてください！</p>
+  </section>
 </div>
 
 
